// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Checkbox variants: Checkbox 1`] = `
<styled.label>
  <StyledComponent
    forwardedComponent={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "sc-VigVT",
          "isStatic": true,
          "lastClassName": "gnCnbN",
          "rules": Array [
            "
  position: relative;
  display: flex;
  align-items: center;
  min-width: 0;
  margin-bottom: 0;
  text-align: left;
  cursor: pointer;
",
          ],
        },
        "displayName": "styled.label",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "sc-VigVT",
        "target": "label",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
  >
    <label
      className="sc-VigVT gnCnbN"
    >
      <styled.div>
        <StyledComponent
          forwardedComponent={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": Array [],
              "componentStyle": ComponentStyle {
                "componentId": "sc-gqjmRU",
                "isStatic": true,
                "lastClassName": "dqXpYh",
                "rules": Array [
                  "
  flex: 0 0 auto;
  min-width: 0;
  margin-right: 10px;
  padding: 4px;
  padding-left: 0;
  color: #8da2b5;
  span {
    box-shadow: none !important;
  }
",
                ],
              },
              "displayName": "styled.div",
              "foldedComponentIds": Array [],
              "render": [Function],
              "styledComponentId": "sc-gqjmRU",
              "target": "div",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
          forwardedRef={null}
        >
          <div
            className="sc-gqjmRU dqXpYh"
          >
            <styled.input
              checked={false}
              color="#5d9df5"
              onChange={[Function]}
              type="checkbox"
            >
              <StyledComponent
                checked={false}
                color="#5d9df5"
                forwardedComponent={
                  Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "attrs": Array [],
                    "componentStyle": ComponentStyle {
                      "componentId": "sc-gZMcBi",
                      "isStatic": false,
                      "lastClassName": "bJWspH",
                      "rules": Array [
                        "
  ",
                        [Function],
                        "
  position: absolute;
  cursor: pointer;
  opacity: 0;

  :focus ~ ",
                        ".sc-bxivhb",
                        " {
    display: block;
    border-radius: 4px;
    box-shadow: 0px 2px 6px rgba(17, 49, 96, 0.24), 0px 0px 0px rgba(17, 49, 96, 0.04);
  }
  :hover ~ ",
                        ".sc-bxivhb",
                        " {
    color: ",
                        [Function],
                        ";
  }
",
                      ],
                    },
                    "displayName": "styled.input",
                    "foldedComponentIds": Array [],
                    "render": [Function],
                    "styledComponentId": "sc-gZMcBi",
                    "target": "input",
                    "toString": [Function],
                    "warnTooManyClasses": [Function],
                    "withComponent": [Function],
                  }
                }
                forwardedRef={null}
                onChange={[Function]}
                type="checkbox"
              >
                <input
                  checked={false}
                  className="sc-gZMcBi bJWspH"
                  color="#5d9df5"
                  onChange={[Function]}
                  type="checkbox"
                />
              </StyledComponent>
            </styled.input>
            <ForwardRef
              checked={false}
              color="#5d9df5"
              icon="emptyCheckbox"
              size={16}
            >
              <styled.span
                checked={false}
                color="#5d9df5"
                size={16}
              >
                <StyledComponent
                  checked={false}
                  color="#5d9df5"
                  forwardedComponent={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "attrs": Array [],
                      "componentStyle": ComponentStyle {
                        "componentId": "sc-bxivhb",
                        "isStatic": false,
                        "lastClassName": "kwqhZm",
                        "rules": Array [
                          "
  ",
                          [Function],
                          "

  color: ",
                          [Function],
                          ";
  width: ",
                          [Function],
                          "px;
  height: ",
                          [Function],
                          "px;
  box-sizing: content-box;
  
  ",
                          [Function],
                          "

  & > svg {
    display: block;
    width: inherit;
    height: inherit;

  }

  &:hover,
  &:active {
    color: ",
                          [Function],
                          ";

  }
",
                        ],
                      },
                      "displayName": "styled.span",
                      "foldedComponentIds": Array [],
                      "render": [Function],
                      "styledComponentId": "sc-bxivhb",
                      "target": "span",
                      "toString": [Function],
                      "warnTooManyClasses": [Function],
                      "withComponent": [Function],
                    }
                  }
                  forwardedRef={null}
                  size={16}
                >
                  <span
                    checked={false}
                    className="sc-bxivhb kwqhZm"
                    color="#5d9df5"
                    size={16}
                  >
                    <test-file-stub />
                  </span>
                </StyledComponent>
              </styled.span>
            </ForwardRef>
          </div>
        </StyledComponent>
      </styled.div>
      <span>
        checkbox
      </span>
    </label>
  </StyledComponent>
</styled.label>
`;

exports[`Storyshots Checkbox variants: Radio button 1`] = `
<styled.label>
  <StyledComponent
    forwardedComponent={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "sc-VigVT",
          "isStatic": true,
          "lastClassName": "gnCnbN",
          "rules": Array [
            "
  position: relative;
  display: flex;
  align-items: center;
  min-width: 0;
  margin-bottom: 0;
  text-align: left;
  cursor: pointer;
",
          ],
        },
        "displayName": "styled.label",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "sc-VigVT",
        "target": "label",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
  >
    <label
      className="sc-VigVT gnCnbN"
    >
      <styled.div>
        <StyledComponent
          forwardedComponent={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": Array [],
              "componentStyle": ComponentStyle {
                "componentId": "sc-gqjmRU",
                "isStatic": true,
                "lastClassName": "dqXpYh",
                "rules": Array [
                  "
  flex: 0 0 auto;
  min-width: 0;
  margin-right: 10px;
  padding: 4px;
  padding-left: 0;
  color: #8da2b5;
  span {
    box-shadow: none !important;
  }
",
                ],
              },
              "displayName": "styled.div",
              "foldedComponentIds": Array [],
              "render": [Function],
              "styledComponentId": "sc-gqjmRU",
              "target": "div",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
          forwardedRef={null}
        >
          <div
            className="sc-gqjmRU dqXpYh"
          >
            <styled.input
              checked={false}
              color="#5d9df5"
              onChange={[Function]}
              type="radio"
            >
              <StyledComponent
                checked={false}
                color="#5d9df5"
                forwardedComponent={
                  Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "attrs": Array [],
                    "componentStyle": ComponentStyle {
                      "componentId": "sc-gZMcBi",
                      "isStatic": false,
                      "lastClassName": "bJWspH",
                      "rules": Array [
                        "
  ",
                        [Function],
                        "
  position: absolute;
  cursor: pointer;
  opacity: 0;

  :focus ~ ",
                        ".sc-bxivhb",
                        " {
    display: block;
    border-radius: 4px;
    box-shadow: 0px 2px 6px rgba(17, 49, 96, 0.24), 0px 0px 0px rgba(17, 49, 96, 0.04);
  }
  :hover ~ ",
                        ".sc-bxivhb",
                        " {
    color: ",
                        [Function],
                        ";
  }
",
                      ],
                    },
                    "displayName": "styled.input",
                    "foldedComponentIds": Array [],
                    "render": [Function],
                    "styledComponentId": "sc-gZMcBi",
                    "target": "input",
                    "toString": [Function],
                    "warnTooManyClasses": [Function],
                    "withComponent": [Function],
                  }
                }
                forwardedRef={null}
                onChange={[Function]}
                type="radio"
              >
                <input
                  checked={false}
                  className="sc-gZMcBi bJWspH"
                  color="#5d9df5"
                  onChange={[Function]}
                  type="radio"
                />
              </StyledComponent>
            </styled.input>
            <ForwardRef
              checked={false}
              color="#5d9df5"
              icon="emptyCheckbox"
              size={16}
            >
              <styled.span
                checked={false}
                color="#5d9df5"
                size={16}
              >
                <StyledComponent
                  checked={false}
                  color="#5d9df5"
                  forwardedComponent={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "attrs": Array [],
                      "componentStyle": ComponentStyle {
                        "componentId": "sc-bxivhb",
                        "isStatic": false,
                        "lastClassName": "kwqhZm",
                        "rules": Array [
                          "
  ",
                          [Function],
                          "

  color: ",
                          [Function],
                          ";
  width: ",
                          [Function],
                          "px;
  height: ",
                          [Function],
                          "px;
  box-sizing: content-box;
  
  ",
                          [Function],
                          "

  & > svg {
    display: block;
    width: inherit;
    height: inherit;

  }

  &:hover,
  &:active {
    color: ",
                          [Function],
                          ";

  }
",
                        ],
                      },
                      "displayName": "styled.span",
                      "foldedComponentIds": Array [],
                      "render": [Function],
                      "styledComponentId": "sc-bxivhb",
                      "target": "span",
                      "toString": [Function],
                      "warnTooManyClasses": [Function],
                      "withComponent": [Function],
                    }
                  }
                  forwardedRef={null}
                  size={16}
                >
                  <span
                    checked={false}
                    className="sc-bxivhb kwqhZm"
                    color="#5d9df5"
                    size={16}
                  >
                    <test-file-stub />
                  </span>
                </StyledComponent>
              </styled.span>
            </ForwardRef>
          </div>
        </StyledComponent>
      </styled.div>
      <span>
        Radio button
      </span>
    </label>
  </StyledComponent>
</styled.label>
`;
